# djapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entry.sh  manage.py  pyproject.toml
.github/workflows/: pre-commit.yml  run_tests.yml
djapi/: asgi.py  settings.py  urls.py  wsgi.py
tables/: models.py  serializers.py  tests.py  urls.py  views.py
tables/migrations/: 0001_initial.py
